Updated font size on city buttons to avoid overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,10 @@ input {
     #myMap {
         max-height: 347px;
     }
+
+    #major-cities button {
+        font-size: 10px;
+    }
 }
 
 @media screen and (min-width: 595px) and (max-width: 669px) {
@@ -347,6 +351,10 @@ input {
     #myMap {
         max-height: 347px;
     }
+
+    #major-cities button {
+        font-size: 10px;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 594px) {
@@ -398,6 +406,10 @@ input {
 
     #myMap {
         max-height: 314px;
+    }
+
+    #major-cities button {
+        font-size: 10px;
     }
 }
 
